Fixed width issue on mobile Added startup scripts

--- a/website/src/main/resources/static/css/bart.css
+++ b/website/src/main/resources/static/css/bart.css
@@ -44,7 +44,8 @@
 
 .bart-form-control {
     margin-top: 15px;
-    width: 10% !important;
+    max-width: 300px !important;
+
 }
 
 .bart-well {
